fix bug z-index do not work
Type: BF
Jira: HALO-1867

--- a/client/applications/bill/style/index.less
+++ b/client/applications/bill/style/index.less
@@ -13,7 +13,6 @@ a {
 
 #main {
   background-color: #fff;
-  overflow: hidden;
 }
 
 .status-data {
